LP TODAY, TWITTER, HERE, I, COME

--- a/public/index.html
+++ b/public/index.html
@@ -521,8 +521,8 @@ scaleY(var(--tw-scale-y, 1))
       <div class="grid lg:gap-14 gap-x-10 gap-y-10">
         <!-- Row 1 -->
         <div class="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-8 items-start">
-          <div class="overflow-hidden aspect-video flex bg-white/5 border-white/10 border rounded-2xl relative items-center justify-center">
-            <span class="sm:text-sm text-xs text-slate-300">Demo almost here</span>
+          <div class="overflow-hidden aspect-video bg-white/5 border-white/10 border rounded-2xl relative">
+            <img src="/demos/demo1.gif" alt="Use many agentic LLM's demo" class="w-full h-full object-cover">
           </div>
           <div class="space-y-3 flex flex-col justify-start md:mt-2">
             <h2 class="sm:text-3xl text-2xl font-medium text-white tracking-tight">Use many agentic LLM's in the same message</h2>
@@ -538,15 +538,15 @@ scaleY(var(--tw-scale-y, 1))
             <p class="sm:text-base text-sm text-slate-400">Like Gmail, Reddit, Notion, Twitter, Youtube, Canva, Github, Supabase, Slack, Monday, Hubspot, Clickup, n8n, zapier, make.com and hundreds more. Set up via Rube MCP.</p><p class="sm:text-base text-sm text-slate-300">Your agents can access and complete tasks on over 500+ apps. You can connect n8n, zapier and make.com for automating between thousands more. You can casually ask them to do stuff like "Make presentation" or "Generate music video, post to YouTube" and they will understand. You can connect as many tool servers (like automative ones) as you like, to go above the 500. These agents actually complete tasks.</p>
             <p class="sm:text-base text-sm text-slate-400">Get up to 9 of those tasks done in about 1 response time.</p>
           </div>
-          <div class="overflow-hidden aspect-video flex order-1 md:order-2 bg-white/5 border-white/10 border rounded-2xl relative items-center justify-center">
-            <span class="sm:text-sm text-xs text-slate-300">Demo almost here</span>
+          <div class="overflow-hidden aspect-video order-1 md:order-2 bg-white/5 border-white/10 border rounded-2xl relative">
+            <img src="/demos/demo2.gif" alt="Connect to 500+ apps demo" class="w-full h-full object-cover">
           </div>
         </div>
 
         <!-- Row 3 -->
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-start">
-          <div class="relative rounded-2xl border border-white/10 bg-white/5 overflow-hidden aspect-video flex items-center justify-center">
-            <span class="sm:text-sm text-xs text-slate-300">Before / after comparison image for ConexusAI</span>
+          <div class="relative rounded-2xl border border-white/10 bg-white/5 overflow-hidden aspect-video">
+            <img src="/demos/demo3.gif" alt="Battalions of agents demo" class="w-full h-full object-cover">
           </div>
           <div class="space-y-3 flex flex-col justify-start md:mt-2">
             <h2 class="text-2xl sm:text-3xl font-medium tracking-tight text-white">Battalions of agents</h2>
@@ -562,15 +562,15 @@ scaleY(var(--tw-scale-y, 1))
             <p class="sm:text-base text-sm text-slate-300">Agents can use other agents. The agent/s will try to use the least amount of agents as possible to minimise costs unless told otherwise, while making a mission of using prompting tools to get whatever you said done.</p>
             <p class="sm:text-base text-sm text-slate-400">Like: @anthropic/claude-4.1-opus Create a plan to web scrape and clone YouTube. Use agents. @openai/gpt-5.1 How can I make an n8n workflow for generating infinite AI gen music?</p>
           </div>
-          <div class="relative rounded-2xl border border-white/10 bg-white/5 overflow-hidden aspect-video flex items-center justify-center order-1 md:order-2">
-            <span class="text-xs sm:text-sm text-slate-300">Team collaboration GIF / video</span>
+          <div class="relative rounded-2xl border border-white/10 bg-white/5 overflow-hidden aspect-video order-1 md:order-2">
+            <img src="/demos/demo4.gif" alt="Agents using agents demo" class="w-full h-full object-cover">
           </div>
         </div>
 
         <!-- Row 5 -->
         <div class="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-8 items-start">
-          <div class="relative rounded-2xl border border-white/10 bg-white/5 overflow-hidden aspect-video flex items-center justify-center">
-            <span class="text-xs sm:text-sm text-slate-300">Gallery of generated outputs, or a looping reel</span>
+          <div class="relative rounded-2xl border border-white/10 bg-white/5 overflow-hidden aspect-video">
+            <img src="/demos/demo5.gif" alt="Generate images, videos, music demo" class="w-full h-full object-cover">
           </div>
           <div class="space-y-3 flex flex-col justify-start md:mt-2">
             <h2 class="sm:text-3xl text-2xl font-medium text-white tracking-tight">Agents can generate images, videos, music audio, presentations, graphs and webpages</h2>
@@ -588,15 +588,15 @@ scaleY(var(--tw-scale-y, 1))
               Define which workflows should auto‑run end‑to‑end, and which should pause for you or your team to confirm, edit, or reroute before they execute.
             </p>
           </div>
-          <div class="relative rounded-2xl border border-white/10 bg-white/5 overflow-hidden aspect-video flex items-center justify-center order-1 md:order-2">
-            <span class="text-xs sm:text-sm text-slate-300">Approval step / review screen mockup or animation</span>
+          <div class="relative rounded-2xl border border-white/10 bg-white/5 overflow-hidden aspect-video order-1 md:order-2">
+            <img src="/demos/demo6.gif" alt="Automations demo" class="w-full h-full object-cover">
           </div>
         </div>
 
         <!-- Row 7 (new) -->
         <div class="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-8 items-start">
-          <div class="relative rounded-2xl border border-white/10 bg-white/5 overflow-hidden aspect-video flex items-center justify-center">
-            <span class="text-xs sm:text-sm text-slate-300">Analytics dashboard of agent performance / cost savings</span>
+          <div class="relative rounded-2xl border border-white/10 bg-white/5 overflow-hidden aspect-video">
+            <img src="/demos/demo7.png" alt="Connect CLI tools" class="w-full h-full object-cover">
           </div>
           <div class="space-y-3 flex flex-col justify-start md:mt-2">
             <h2 class="sm:text-3xl text-2xl font-medium text-white tracking-tight">Connect your Claude Code, Codex, Cursor agent, Qwen CLI and Gemini CLI</h2>
